# airnet

./: .gitignore  README.md  ids.txt  kg_prototype.py  min_prototype.py  pyproject.toml  setup.cfg
data/graph/: graph.gpickle
data/raw/metadata/: 1706.03762v7.json
examples/: ex_graph.py  ex_query.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: ConceptDetail.tsx  PaperDetail.tsx  PaperInfluenceExplorer.tsx  SearchBar.tsx  SearchResultsList.tsx
kg_ai_papers/: cli.py  documents.py  grobid_client.py  tei_parser.py
kg_ai_papers/api/: graph_api.py  models.py  query.py
kg_ai_papers/cli/: __init__.py  __main__.py  batch_ingest.py  batch_ingest_arxiv.py  bfs_ingest.py  main.py  pipeline_cli.py  query_cli.py
kg_ai_papers/config/: settings.py
kg_ai_papers/graph/: builder.py  influence.py  io.py  schema.py  storage.py
kg_ai_papers/ingest/: __init__.py  arxiv_ingest.py  bfs_seed_expand.py  pipeline.py
kg_ai_papers/models/: concept.py  paper.py  reference.py  section.py
kg_ai_papers/nlp/: concept_extraction.py  embedding.py
kg_ai_papers/parsing/: grobid_client.py  pipeline.py  tei_parser.py
kg_ai_papers/web/: app.py  security.py
scripts/: debug_concepts_for_paper.py  debug_ingest_single.py
tests/: test_api_query.py  test_batch_ingest_cli.py  test_concept_aggregation.py  test_concept_extraction.py  test_embedding.py  test_graph_api.py  test_graph_builder.py  test_graph_builder_concepts.py  test_graph_io.py  test_graph_persistence.py  test_grobid_client.py  test_influence.py  test_ingest_api.py  test_ingest_pipeline.py  test_ingestion_graph.py  test_ingestion_pipeline.py  test_integration_pipeline.py  test_query_cli.py  test_settings.py  test_tei_parser.py  test_tei_references.py  test_web_app.py  test_web_ingest.py  test_web_read_endpoints.py
