[metadata]
name = kg-ai-papers
version = 0.1.0
author = Edward Callihan
description = Knowledge graph for AI research papers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/your-repo
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi
    uvicorn
    pydantic
    pydantic-settings
    networkx
    sentence-transformers
    keybert
    rapidfuzz
    arxiv
    requests

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    isort
    mypy

[tool:pytest]
testpaths = tests
markers =
    integration: marks tests as integration tests that may require external services (e.g. GROBID)
python_files = test_*.py

